Fixing submenu floating behind homebox controls

--- a/themes/dimpact/scss/drupal/_navigation.scss
+++ b/themes/dimpact/scss/drupal/_navigation.scss
@@ -66,7 +66,7 @@ nav {
             position: absolute;
             top: 46px;
             display: none;
-            z-index: 10;
+            z-index: 15;
             padding: 0;
             max-width: 250px;
             min-width: 194px;
